--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
           <button type="submit" class="btn btn-primary btn-block">Register</button>
         </form>
         <p class="mt-3 text-center">
-          Already have an account? <a href="login.html">Login here</a>
+          Already have an account? <a href="index.html">Login here</a>
         </p>
       </div>
     </div>
